Opened 4 years ago
Closed 4 years ago
#16592 closed bug (fixed)
BFileGameSound adds a distorted part to the end of the track
Reported by: | bitigchi | Owned by: | jackburton |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta3 |
Component: | Kits/Game Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Steps:
- Download one of the sound theme candidates (I used this one.
- Apply sound files to their respective entries in the Sounds prefs
- Press Play button
Expected:
- Track should playback without any issue
Actual:
- Playback ends with an abrupt sound, as if it's about to start playing it again
Change History (2)
comment:1 by , 4 years ago
Component: | Preferences/Sounds → Kits/Game Kit |
---|---|
Description: | modified (diff) |
Owner: | changed from | to
Summary: | [Sounds] Playback adds a distorted part to the end of the track → BFileGameSound adds a distorted part to the end of the track |
Version: | R1/beta2 → R1/Development |
comment:2 by , 4 years ago
Milestone: | Unscheduled → R1/beta3 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
It's not so much the Sounds prefs fault, but the BFileGameSound it uses to play back sounds. I moved the ticket to the game kit category and adapted the summary/description.
Another way to reproduce: build and playback a sound with /src/tests/kits/media/playsound/playsound.cpp It also produces the noise at the end, contrary than playing with "media_client play".